Let's revamp the resume again, shall we?

--- a/public/resume.html
+++ b/public/resume.html
@@ -1,117 +1,77 @@
 <header>
     <h1>Tucker McLean<span class="blink"></span></h1>
-    <p class="center"><span class="nowrap">Beaverton, Oregon USA</span> | <a href="tel:+18124304200">+1 812 430 4200</a> | <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a href="https://tuckermclean.com/">tuckermclean.com</a> | <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
-    <h3 style="float: none;" class="center">Cloud Engineer</h3>
-    <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux &amp; Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
+    <p class="center"><span class="nowrap">Beaverton, Oregon</span> | <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a href="https://tuckermclean.com/">tuckermclean.com</a></p>
+    <h3 style="float: none;" class="center">Infrastructure Engineer &amp; Cloud Developer</h3>
 </header>
 <section>
-    <h2>Summary</h2>
-    <p>Devoted IT Professional and AWS Certified Cloud Practitioner with proven expertise in Linux, networking, and cloud technologies. Known for delivering scalable and efficient solutions, automating workflows, and providing targeted, tactful feedback. Proficient in Python, Node.JS, and orchestration tools like Terraform and Ansible, with recent accomplishments in building AWS-based infrastructure as code (IaC) using services like S3, API Gateway, Lambda, and DynamoDB.</p>
+    <h2>Professional Summary</h2>
+    <p>Experienced IT professional with 30+ years in technology, specializing in transforming complex technical challenges into efficient solutions. Strong track record at Intel and other technology companies of building reliable infrastructure and optimizing systems. Combines established Linux/networking expertise with cloud technologies to create scalable, resilient architectures. Known for resourceful problem-solving and delivering substantial cost savings through innovative approaches.</p>
 </section>
 <section>
     <h2>Core Competencies</h2>
     <ul>
-        <li>Network Infrastructure</li>
-        <li>Linux</li>
-        <li>Amazon Web Services (AWS)</li>
-        <li>Infrastructure as Code (IaC)</li>
+        <li>Infrastructure Design &amp; Implementation</li>
+        <li>Cloud Architecture (AWS)</li>
+        <li>Linux Systems Engineering</li>
+        <li>Network Architecture &amp; Security</li>
         <li>Full-Stack Development</li>
+        <li>Technical Team Collaboration</li>
     </ul>
 </section>
 <section>
-    <h2>Experience</h2>
-    <article>
-        <h3>Intel Corporation <span class="location">Hillsboro, Oregon</span></h3>
-        <p class="date">June 2022 - September 2024</p>
-        <h4>Technology Project/Program Management Analyst</h4>
-        <p class="date">April 2024 - September 2024</p>
-        <p class="summary">Served as SWLC liaison, software release coordinator, disseminator of technical and security advisories, and beacon of truth and knowledge.</p>
-        <ul>
-            <li>Served as the liaison for Software Legal Compliance (SWLC) for software and firmware releases from Intel's Ethernet Product Division within the greater Network and Edge Solutions Group (NESG IEPD).</li>
-            <li>Provided pre-release and final builds and release packages of NIC drivers, firmware, and tools to program managers serving our top-tier server customers as well as our other accounts, following all SWLC and security protocols.</li>
-            <li>Curated a PowerBI dashboard providing visibility of published Technical and Security Advisories to key stakeholders and customers of Intel's Network and Edge Group (NEX).</li>
-            <li>Stood as a beacon of truth and knowledge for the teams making use of the IEPD Core Ethernet Technology validation lab, guiding the validation technicians and spearheading the development and maintenance of the lab with various server, network switching and vRAN technologies.</li>
-            <li>Enabled application engineering functions, providing critical knowledge of and expertise with Linux and networking technologies, serving our top-tier customers and other accounts.</li>
-        </ul>
-        <h4>Network Product Validation Technician</h4>
-        <p class="date">June 2022 - April 2024</p>
-        <p class="summary">Spearheaded validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs, reinforcing team confidence with critical expertise, saving many hours and thousands of dollars.</p>
-        <ul>
-            <li>Designed an OS deployment system, custom-engineered using Python and RHEL, showcasing expertise in boot processes -- from legacy and UEFI methods to PXE booting across multiple OS platforms -- streamlined by automation of key network services, including HTTP, DHCP, DNS, TFTP, NFS, and Samba, saving the company thousands by repurposing "scrap" hardware</li>
-            <li>Directed lab automation projects, including the automation of OS installs, validation tests, issue reproductions, driver builds and installations, package mirrors for Linux distros, and switch configuration management, saving many hours through elimination of manual tasks.</li>
-            <li>Leveraged Git and GitHub for revision control, Vagrant and VMware Workstation for building virtual development environments.</li>
-            <li>Employed Python, bash, PowerShell, and Windows batch scripting, merging experiential knowledge and targeted research to enhance lab operations, freeing technicians and engineers from grunt-work and improving customer satisfaction.</li>
-            <li>Oversaw a dynamic network environment with an array of server and switch brands including Cisco, HP, Lenovo, SuperMicro, and more.</li>
-            <li>Proactively embraced new tasks, including mastering Intel's build system to enable special NIC driver and firmware releases, and conducting a pivotal visit to a large, prestigious retail customer's network validation lab.</li>
-            <li>Cultivated relationships across the organization, frequently navigating new technical domains, emerging as a go-to source for insights on Linux, networking, and automation.</li>
-            <li>Continuously elevated operations by harnessing online research skills, fostering improved operations.</li>
-        </ul>
-    </article>
-    <article>
-        <h3>Kelly Services @ Intel <span class="location">Hillsboro, Oregon</span></h3>
-        <p class="date">August 2021 - June 2022</p>
-        <h4>Engineer I</h4>
-        <p class="summary">Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs.</li>
-        <ul>
-            <li>Collaborated with an array of internal stakeholders, ranging from engineers and managers to technical leads, ensuring their requirements were met efficiently.</li>
-            <li>Managed and maintained switch and server hardware from diverse manufacturers in a lab/datacenter setting.</li>
-            <li>Custom-engineered and deployed test environments, facilitating enhanced debugging and validation using optimal hardware-software combinations.</li>
-            <li>Acted as the team's primary consultant for Linux usage and configurations across various distributions, streamlining operational processes.</li>
-            <li>Devised and implemented automated scripts and processes using Python, bash, and Ansible, driving operational efficiency.</li>
-            <li>Regularly harnessed online resources such as corporate wikis, knowledge bases, and forums to acquire and apply technical information.</li>
-        </ul>
-    </article>
-    <article>
-        <h3>Bertram Communications <span class="location">Random Lake, Wisconsin</span></h3>
-        <p class="date">November 2019 - March 2021</p>
-        <h4>PHP Developer / Support Agent</h4>
-        <ul>
-            <li>Developed and fine-tuned ISP management software, addressing bugs and incorporating new features using PHP, JavaScript, SQL, bash, and Tcl.</li>
-            <li>Executed major development projects, including overhauling the installation system and implementing the support for DHCP option 82.</li>
-            <li>Built and maintained a development lab, equipped with Proxmox VM servers, routers, switches, and Cambium wireless equipment, improving validation of code before it goes live on customer servers, reducing customer incidents, improving code quality and customer satisfaction.</li>
-            <li>Elevated the technical acumen of the development and customer experience teams, particularly in Linux and networking domains.</li>
-            <li>Rendered exceptional support to wireless and fiber ISPs, customers employing our all-in-one ISP management software.</li>
-            <li>Established a support test lab and curated extensive, diagram-enhanced documentation.</li>
-            <li>Expertly diagnosed and resolved issues related to Linux, MySQL, networks, and customer billing systems.</li>
-            <li>Executed onboarding of new customers, handling installation, configuration, data migrations, and issue resolution.</li>
-        </ul>
-    </article>
-    <article>
-        <h3>Lakeshore Technical College <span class="location">Cleveland, Wisconsin</span></h3>
-        <p class="date">June 2019 - November 2019</p>
-        <h4>IT Support</h4>
-        <ul>
-            <li>Provided IT assistance to stakeholders within a Windows enterprise network.</li>
-            <li>Delivered both technical and hands-on support, ensuring a smooth user experience and prompt issue resolution.</li>
-        </ul>
-    </article>
-</section>
-<section>
-    <h2>Additional Relevant Experience</h2>
-    <h3>Central Oregon Internet <span class="location">Bend, Oregon</span></h3>
-    <p class="summary">Technical Support | Linux System Administrator</p>
-</section>
-<section>
-    <h2>Selected Projects</h2>
+    <h2>Key Achievements</h2>
+    <h3>At Intel Corporation (2022-2024):</h3>
     <ul>
-        <li>
-            <p>
-                <strong>AWS Chat Solution</strong><br/>
-                Developed and deployed a real-time chat system hosted on AWS using S3, CloudFront, Lambda functions written in Node.JS, API Gateway, DynamoDB, Simple Queueing Service (SQS), and Cognito. Integrated OAuth/OIDC for secure authentication, providing a seamless and secure user experience.
-            </p>
-        </li>
-        <li>
-            <p>
-                <strong>Lab Automation System</strong><br/>
-                Engineered a customer OS deployment system using Python and RHEL, automating network services such as HTTP, DHCP, DNS, and TFTP. Repurposed outdated hardware to create an efficient and cost-effective solution.
-            </p>
-        </li>
+        <li>Built and deployed a complete 100G fiber lab network infrastructure, including automated OS deployments, generating significant cost savings through strategic hardware repurposing</li>
+        <li>Managed critical firmware releases and developed validation environments for Intel's Ethernet Product Division, supporting top-tier server customers</li>
+        <li>Stood as a beacon of truth and knowledge, serving as a trusted resource for Linux and networking expertise</li>
+        <li>Improved software legal compliance workflows and curated PowerBI dashboards for technical and security advisory tracking</li>
+    </ul>
+    <h3>Infrastructure Development:</h3>
+    <ul>
+        <li>Designed and implemented a cloud-based portfolio platform using AWS Lambda, API Gateway, WebSocket APIs, and microservices</li>
+        <li>Created an efficient OS deployment system integrating DHCP, DNS, TFTP, and automated network services</li>
+        <li>Developed multi-environment infrastructure using Terraform, implementing CI/CD pipelines and security protocols</li>
+    </ul>
+    <h3>Technical Impact:</h3>
+    <ul>
+        <li>Regularly consulted on complex technical challenges across organizations</li>
+        <li>Identified and implemented cost-effective solutions through hardware repurposing and process optimization</li>
+        <li>Supported technical teams with Linux, networking, and cloud technologies expertise</li>
     </ul>
 </section>
 <section>
-    <h2>Education</h2>
-    <h3>Lakeshore Technical College</h3>
-    <p class="summary">Associate's Coursework in IT Networking</p>
+    <h2>Professional Experience</h2>
+    <article>
+        <h3>Intel Corporation | Hillsboro, Oregon</h3>
+        <h4>Project Management Analyst &amp; Validation Engineer (2022-2024)</h4>
+        <p>Led infrastructure initiatives and provided technical guidance for enterprise networking solutions.</p>
+    </article>
+    <article>
+        <h3>Bertram Communications | Random Lake, Wisconsin</h3>
+        <h4>Developer &amp; Technical Support Engineer (2019-2021)</h4>
+        <p>Developed ISP management systems, established development environments, and spearheaded enterprise technical support.</p>
+    </article>
+<section>
+    <h2>Technical Proficiencies</h2>
+    <h3>Cloud &amp; Infrastructure:</h3>
+    <ul>
+        <li><strong>AWS Services:</strong> Lambda, API Gateway, CloudFront, S3, DynamoDB, Cognito, SQS, Route 53</li>
+        <li><strong>Infrastructure as Code (IaC):</strong> Terraform, Ansible</li>
+        <li><strong>Containerization &amp; Virtualization:</strong> Docker, VMware, Proxmox</li>
+    </ul>
+    <h3>Programming &amp; Development:</h3>
+    <ul>
+        <li><strong>Languages:</strong> Python, Node.js, PHP, JavaScript</li>
+        <li><strong>Tools:</strong> Git, CI/CD pipelines, Jenkins, Jira</li>
+        <li><strong>Full-Stack Web Development</strong></li>
+    </ul>
+    <h3>Enterprise Systems:</h3>
+    <ul>
+        <li><strong>Linux Distributions:</strong> RHEL, Debian, Ubuntu, CentOS, Amazon Linux</li>
+        <li><strong>Networking:</strong> Cisco, HP, Extreme Networks</li>
+        <li><strong>Security:</strong> Firewalls, VPNs, OAuth/OIDC, API Security, Network Security</li>
+    </ul>
 </section>
 <section>
     <h2>Certifications</h2>
@@ -120,7 +80,12 @@
         <li>AWS Certified Cloud Practitioner</li>
     </ul>
 </section>
-<footer>
-    <p class="center"><em>References available upon request</em></p>
-    <p class="center moai"></p>
-</footer>
+<section>
+    <h2>Education</h2>
+    <h3>Lakeshore Technical College</h3>
+    <p class="summary">Associate's Coursework in IT Networking</p>
+</section>
+<section>
+    <h2>Philosophy</h2>
+    <p>"I see systems--whether technical or organizational--as living flows. Every component matters. Every interaction must land on time, on target, and on budget. I bring curiosity, expertise, and a track record of getting things done."</p>
+</section>
