Updated resume to reflect content of LinkedIn with fresh layout

--- a/public/resume.html
+++ b/public/resume.html
@@ -1,59 +1,94 @@
 <header>
     <h1>Tucker McLean<span class="blink"></span></h1>
-    <p class="center"><span class="nowrap">Beaverton, Oregon</span> | <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a href="https://tuckermclean.com/">tuckermclean.com</a></p>
-    <h3 style="float: none;" class="center">Infrastructure Engineer &amp; Cloud Developer</h3>
+    <p class="center"><span class="nowrap">Beaverton, Oregon</span> | <a href="tel:+18124304200">812-430-4200</a> | <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a href="https://tuckermclean.com/">tuckermclean.com</a> <a href="https://www.linkedin.com/in/tucker-mclean/"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="currentColor" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a></p>
+    <h3 style="float: none;" class="center">Technical Support Engineer | Network &amp; Systems Validation<br/>Linux &amp; Cloud Specialist | Problem-Solver &amp; Optimizer</h3>
 </header>
 <section>
-    <h2>Professional Summary</h2>
-    <p>Experienced IT professional with 30+ years in technology, specializing in transforming complex technical challenges into efficient solutions. Strong track record at Intel and other technology companies of building reliable infrastructure and optimizing systems. Combines established Linux/networking expertise with cloud technologies to create scalable, resilient architectures. Known for resourceful problem-solving and delivering substantial cost savings through innovative approaches.</p>
+    <h2>Summary</h2>
+    <p>Experienced IT generalist with 30+ years in network validation, support engineering, and system optimization. Skilled in integrating on-prem data center infrastructure with AWS and automation, bridging hardware, software, and networking teams to enhance efficiency and performance.</p>
+
+    <h3>Key Strengths:</h3>
+    <ul>
+        <li><strong>Technical Support & Issue Resolution:</strong> rapid troubleshooting, root cause analysis, and problem-solving.</li>
+        <li><strong>Network & System Validation:</strong> hands-on testing with Linux, Windows, VMware, and enterprise networking hardware.</li>
+        <li><strong>Process Optimization & Automation:</strong> custom scripting (Python, Bash, PowerShell), infrastructure automation (Terraform, Ansible).</li>
+        <li><strong>Customer-Facing Experience:</strong> Ability to communicate complex technical details to engineers, managers, and customers.</li>
+    </ul>
+
+    <h3>At Intel Corporation (2021-2024):</h3>
+    <ul>
+        <li>Validated and tested network interface cards (NICs), drivers, and firmware for enterprise customers across Linux, Windows, VMware ESXi, and other platforms.</li>
+        <li>Developed automated validation environments, reducing issue reproduction time by 50%.
+        <li>Led troubleshooting efforts for major enterprise customers, diagnosing network and system issues, escalating as needed.</li>
+        <li>Optimized network testing processes, integrating Python and Bash scripting to streamline validation workflows.</li>
+    </ul>
+    <p>Currently seeking Technical Support Engineer or Network Validation roles where I can apply my expertise in networking, systems validation, and customer-driven problem-solving.</p>
 </section>
 <section>
-    <h2>Core Competencies</h2>
-    <ul>
-        <li>Infrastructure Design &amp; Implementation</li>
-        <li>Cloud Architecture (AWS)</li>
-        <li>Linux Systems Engineering</li>
-        <li>Network Architecture &amp; Security</li>
-        <li>Full-Stack Development</li>
-        <li>Technical Team Collaboration</li>
-    </ul>
-</section>
-<section>
-    <h2>Key Achievements</h2>
-    <h3>At Intel Corporation (2022-2024):</h3>
-    <ul>
-        <li>Built and deployed a complete 100G fiber lab network infrastructure, including automated OS deployments, generating significant cost savings through strategic hardware repurposing</li>
-        <li>Managed critical firmware releases and developed validation environments for Intel's Ethernet Product Division, supporting top-tier server customers</li>
-        <li>Stood as a beacon of truth and knowledge, serving as a trusted resource for Linux and networking expertise</li>
-        <li>Improved software legal compliance workflows and curated PowerBI dashboards for technical and security advisory tracking</li>
-    </ul>
-    <h3>Infrastructure Development:</h3>
-    <ul>
-        <li>Designed and implemented a cloud-based portfolio platform using AWS Lambda, API Gateway, WebSocket APIs, and microservices</li>
-        <li>Created an efficient OS deployment system integrating DHCP, DNS, TFTP, and automated network services</li>
-        <li>Developed multi-environment infrastructure using Terraform, implementing CI/CD pipelines and security protocols</li>
-    </ul>
-    <h3>Technical Impact:</h3>
-    <ul>
-        <li>Regularly consulted on complex technical challenges across organizations</li>
-        <li>Identified and implemented cost-effective solutions through hardware repurposing and process optimization</li>
-        <li>Supported technical teams with Linux, networking, and cloud technologies expertise</li>
-    </ul>
-</section>
-<section>
-    <h2>Professional Experience</h2>
+    <h2>Experience</h2>
     <article>
         <h3>Intel Corporation | Hillsboro, Oregon</h3>
-        <h4>Project Management Analyst &amp; Validation Engineer (2022-2024)</h4>
-        <p>Led infrastructure initiatives and provided technical guidance for enterprise networking solutions.</p>
+        <h4>Technology Project/Program Management Analyst</h4>
+        <p class="date">April 2024 - September 2024</p>
+        <ul>
+            <li>Managed software legal compliance (SWLC) reviews for driver and firmware releases, ensuring regulatory adherence.</li>
+            <li>Provided pre-release and final builds of NIC drivers and firmware to enterprise customers, supporting top-tier accounts.</li>
+            <li>Curated a PowerBI dashboard to track technical and security advisories,improving visibility for key stakeholders.</li>
+            <li>Served as a technical liaison, guiding teams in our network product validation lab with advanced Linux and networking expertise.</li>
+        </ul>
+    </article>
+    <article>
+        <h4>Network Product Validation Technician</h4>
+        <p class="date">June 2022 - April 2024</p>
+        <ul>
+            <li>Validated and tested network interface cards (NICs), drivers, and firmware across Linux, Windows, and VMware ESXi.
+            <li>Developed an automated OS deployment system, reducing issue reproduction time by 50% and streamlining validation workflows.</li>
+            <li>Led troubleshooting efforts for enterprise customers, analyzing network and system logs to diagnose critical issues.</li>
+            <li>Optimized lab automation processes, implementing Python and Bash scripting for validation testing and system configurations.</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Kelly Services @ Intel | Hillsboro, Oregon</h3>
+        <h4>Engineer I</h4>
+        <p class="date">August 2021 - June 2022</p>
+        <ul>
+            <li>Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers.</li>
+            <li>Managed switch and server hardware across diverse enterprise environments.</li>
+            <li>Implemented custom scripting solutions for process automation and test environment optimization.</li>
     </article>
     <article>
         <h3>Bertram Communications | Random Lake, Wisconsin</h3>
-        <h4>Developer &amp; Technical Support Engineer (2019-2021)</h4>
-        <p>Developed ISP management systems, established development environments, and spearheaded enterprise technical support.</p>
+        <h4>Developer / Technical Support Engineer</h4>
+        <p class="date">November 2019 - March 2021</p>
+        <ul>
+            <li>Provided technical support for over 300 wireless and fiber ISPs, diagnosing complex network and system issues affecting roughly 100,000 end customers.</li>
+            <li>Developed and maintained our ISP management SaaS solution, resolving software bugs and optimizing features.</li>
+            <li>Built a support and development test lab, implementing extensive documentation for troubleshooting procedures.</li>
+        </ul>
     </article>
+    <article>
+        <h3>Lakeshore Technical College | Cleveland, Wisconsin</h3>
+        <h4>IT Support</h4>
+        <p class="date">June 2019 - November 2019</p>
+        <ul>
+            <li>Provided IT assistance for stakeholders within a Windows enterprise network, supporting Windows and macOS clients.</li>
+            <li>Delivered technical and hands-on support, ensuring efficient issue resolution.</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Central Oregon Internet | Bend, Oregon</h3>
+        <h4>Technical Support / Linux System Administrator</h4>
+        <p class="date">March 2002 - June 2003</p>
+        <ul>
+            <li>Delivered technical support for clients across Windows, macOS, and Linux environments.</li>
+            <li>Maintained and optimized Debian Linux servers, improving system reliability.</li>
+            <li>Designed and implemented a spam and virus control system, enhancing security.</li>
+        </ul>
+    </article>
+</section>
+<div class="page-break"></div>
 <section>
-    <h2>Technical Proficiencies</h2>
+    <h2>Top Skills</h2>
     <h3>Cloud &amp; Infrastructure:</h3>
     <ul>
         <li><strong>AWS Services:</strong> Lambda, API Gateway, CloudFront, S3, DynamoDB, Cognito, SQS, Route 53</li>
@@ -63,14 +98,36 @@
     <h3>Programming &amp; Development:</h3>
     <ul>
         <li><strong>Languages:</strong> Python, Node.js, PHP, JavaScript</li>
-        <li><strong>Tools:</strong> Git, CI/CD pipelines, Jenkins, Jira</li>
+        <li><strong>Tools:</strong> Git version control, CI/CD pipelines, Jenkins, Jira</li>
         <li><strong>Full-Stack Web Development</strong></li>
     </ul>
     <h3>Enterprise Systems:</h3>
     <ul>
         <li><strong>Linux Distributions:</strong> RHEL, Debian, Ubuntu, CentOS, Amazon Linux</li>
+        <li><strong>Environments:</strong> On-prem, datacenter, cloud</li>
         <li><strong>Networking:</strong> Cisco, HP, Extreme Networks</li>
         <li><strong>Security:</strong> Firewalls, VPNs, OAuth/OIDC, API Security, Network Security</li>
+    </ul>
+    <h3>Linux Services:</h3>
+    <ul>
+        <li><strong>Web Servers:</strong> Nginx, Apache, Caddy, Traefik</li>
+        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
+        <li><strong>DNS:</strong> BIND, PowerDNS, dnsmasq</li>
+        <li><strong>DHCP:</strong> ISC DHCP, dnsmasq, Kea</li>
+        <li><strong>Storage:</strong> Ceph, GlusterFS</li>
+        <li><strong>File Sharing:</strong> Samba, NFS</li>
+        <li><strong>Mail Servers:</strong> Postfix, Dovecot, qmail</li>
+        <li><strong>Virtualization:</strong> KVM, Proxmox</li>
+        <li><strong>Containerization:</strong> Docker, Podman</li>
+        <li><strong>Automation:</strong> Ansible, Terraform</li>
+    </ul>
+    <h3>Management:</h3>
+    <ul>
+        <li><strong>Project Management:</strong> Jira, ClickUp</li>
+        <li><strong>Documentation:</strong> Markdown, LaTeX</li>
+        <li><strong>Technical Writing:</strong> User manuals, API documentation</li>
+        <li><strong>Customer Support:</strong> Helpdesk, ticketing systems</li>
+        <li><strong>Training &amp; Mentoring:</strong> Onboarding, knowledge sharing</li>
     </ul>
 </section>
 <section>
@@ -85,7 +142,4 @@
     <h3>Lakeshore Technical College</h3>
     <p class="summary">Associate's Coursework in IT Networking</p>
 </section>
-<section>
-    <h2>Philosophy</h2>
-    <p>"I see systems--whether technical or organizational--as living flows. Every component matters. Every interaction must land on time, on target, and on budget. I bring curiosity, expertise, and a track record of getting things done."</p>
-</section>
+<p class="keywords">datacenter technician | project management skills | dropbox | verbal and written communication skills | management skills | computer skills | computer science | computer networking | computer hardware | computer engineering | computer engineering technology | computer engineering technician | computer and information systems | computer and information systems security | cloud computing | cloud architecture | cloud engineer | cloud architect | cloud administrator | cloud computing security | cloud computing technology | cloud computing management | cloud computing infrastructure | cloud computing architecture | cloud computing applications | cloud computing administration | validation engineer | validation technician | network validation engineer</p>
