Change welcome links to /writings/

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -5,7 +5,7 @@
 <section>
     <p style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 1rem;">
         <span style="font-size: 1.35rem;" class="center"><a href="#/intro" class="executable">Introduction</a></span>
-        <span style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></span>
+        <span style="font-size: 1.35rem;"><a href="/writings/">Writings</a></span>
         <span style="font-size: 1.35rem;" class="center"><a href="#/resume" class="directory">Resume</a></span>
     </p>
 </section>
@@ -21,6 +21,6 @@
         systems--technical and organizational. I see the big picture, find inefficiencies, and deliver reliable
         solutions that stand the test of time.</p>
     <p>Now, I have expanded into <strong>AWS</strong> to bring scalable, efficient systems into the cloud. <strong><a href="https://github.com/tuckermclean/tuckermclean.com">This website</a> and the AWS cloud <a href="https://github.com/tuckermclean/tuckermclean.com_backend">infrastructure-as-code</a> supporting it are available for your perusal on GitHub.</strong></p>
-    <p>I'd like you to read about <a href="#/cloud-journey">my cloud journey</a>.</p>
+    <p>I'd like you to read about <a href="/writings/posts/my-cloud-portfolio-journey/">my cloud journey</a>.</p>
     <p>If you need someone who sees both the forest <em>and</em> the trees--and gets things done--let's talk.</p>
 </section>
