Adjust identity per domain

--- a/public/intro.html
+++ b/public/intro.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Hi, I'm Tucker McLean.<span class="blink"></span></h1>
+    <h1>Hi, I'm <span class="name">Tucker McLean</span>.<span class="blink"></span></h1>
     <h2>I have over 3 decades of experience exploring, building, and optimizing technology.🖥️💾⚙️</h2>
 </header>
 <section>
@@ -52,7 +52,7 @@
             expertise, and a track record of getting things done. I've got niche skills, serious Google-fu, and a whole lot
             of heart for what I do. After over three decades in tech, I'm just as excited today as I was in 1990.</p>
         <p>Sincerely,</p>
-    <p>TM❤️</p>
+    <p><span class="initials">TM</span>❤️</p>
     <p class="center" style="font-size: 1.35rem;"><a href="#/resume" class="directory">Resume</a></p>
-    <p class="center" style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></p>
+    <p class="center" style="font-size: 1.35rem;"><a href="/writings/posts/my-cloud-portfolio-journey/">My Cloud Journey</a></p>
 </section>
