--- a/public/welcome.html
+++ b/public/welcome.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Hi, I'm Tucker McLean.<span class="blink"></span></h1>
+    <h1>Hi, I'm <span class="name">Tucker McLean</span>.<span class="blink"></span></h1>
     <h2>I've spent over 3 decades building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
 </header>
 <section>
