--- a/public/resume.html
+++ b/public/resume.html
@@ -1,31 +1,43 @@
 <header>
     <h1><span class="name">Tucker McLean</span><span class="blink"></span></h1>
     <p class="center"><span class="nowrap">Beaverton, Oregon</span> | <a href="tel:+18124304200">812-430-4200</a> | <a class="email" href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a class="domain" href="https://tuckermclean.com/">tuckermclean.com</a> <a href="https://www.linkedin.com/in/tucker-mclean/"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="currentColor" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a></p>
-    <h3 style="float: none;" class="center">Technical Support Engineer | Network &amp; Systems Validation<br/>Linux &amp; Cloud Specialist | Problem-Solver &amp; Optimizer</h3>
+    <h3 style="float: none;" class="center">Software Engineering &amp; Validation Specialist<br />Structured Code Analyst | Linux, Cloud &amp; Automation</h3>
 </header>
 <section>
     <h2>Summary</h2>
-    <p>Experienced IT generalist with 30+ years in network validation, support engineering, and system optimization. Skilled in integrating on-prem data center infrastructure with AWS and automation, bridging hardware, software, and networking teams to enhance efficiency and performance.</p>
+    <p>Experienced IT generalist with experience across three decades in IT, blending depth in software engineering, network validation, and technical support engineering. Leveraging structured code analysis to improve software quality, accelerate development cycles, and optimize system performance across Linux, Windows, and cloud environments (AWS).</p>
 
     <h3>Key Strengths:</h3>
     <ul>
-        <li><strong>Technical Support & Issue Resolution:</strong> rapid troubleshooting, root cause analysis, and problem-solving.</li>
-        <li><strong>Network & System Validation:</strong> hands-on testing with Linux, Windows, VMware, and enterprise networking hardware.</li>
-        <li><strong>Process Optimization & Automation:</strong> custom scripting (Python, Bash, PowerShell), infrastructure automation (Terraform, Ansible).</li>
-        <li><strong>Customer-Facing Experience:</strong> Ability to communicate complex technical details to engineers, managers, and customers.</li>
+        <li><strong>Software Engineering &amp; Code Analysis:</strong> Independent reviews, interface assessments, and quality assurance.</li>
+        <li><strong>AI-Augmented Development:</strong> Authoring precise technical requirements for AI-driven software patch generation.</li>
+        <li><strong>Technical Validation &amp; Automation:</strong> Extensive hands-on experience with network infrastructure, automated testing (Python, Bash, PowerShell), and infrastructure management (Terraform, Ansible).</li>
+        <li><strong>Customer &amp; Cross-team Collaboration:</strong> Clearly communicating complex technical details and solutions to engineering teams and stakeholders.</li>
     </ul>
 
-    <h3>At Intel Corporation (2021-2024):</h3>
+    <h3>Recent Experience Highlights:</h3>
     <ul>
-        <li>Validated and tested network interface cards (NICs), drivers, and firmware for enterprise customers across Linux, Windows, VMware ESXi, and other platforms.</li>
-        <li>Developed automated validation environments, reducing issue reproduction time by 50%.
-        <li>Led troubleshooting efforts for major enterprise customers, diagnosing network and system issues, escalating as needed.</li>
-        <li>Optimized network testing processes, integrating Python and Bash scripting to streamline validation workflows.</li>
+        <li>Conduct independent code and patch reviews, analyzing GitHub issues, pull requests, and CI/CD test artifacts to drive software quality improvements.</li>
+        <li>Develop problem requirements and technical specifications to guide AI models and software engineers, significantly enhancing development efficiency.</li>
+        <li>Implement robust validation and testing environments, improving software reliability and reducing reproduction and troubleshooting times by up to 50%.</li>
+        <li>Optimize open-source project documentation, providing precise, actionable feedback to accelerate team onboarding and issue resolution.</li>
     </ul>
-    <p>Currently seeking Technical Support Engineer or Network Validation roles where I can apply my expertise in networking, systems validation, and customer-driven problem-solving.</p>
 </section>
 <section>
     <h2>Experience</h2>
+    <article>
+        <h3>Freelance</h3>
+        <h4>Software Engineering & AI Data Specialist</h4>
+        <p class="date">Feb 2025 - Present</p>
+        <ul>
+            <li>Support software engineering initiatives as a senior reviewer by analyzing GitHub issues, patches, and CI/CD test artifacts to optimize development workflows.</li>
+            <li>Author problem requirements and technical specifications to assist AI models and engineers in generating high-quality software patches.</li>
+            <li>Conduct independent code reviews to assess patch quality, interface changes, and test coverage against project standards.</li>
+            <li>Interpret API behaviors, test results, and system logs to create actionable insights for engineering teams and AI development.</li>
+            <li>Enhance open-source project documentation and onboarding materials through precise analysis and structured feedback.</li>
+            <li>Apply skills in Linux systems, Git workflows, Agile development methodologies, and quality assurance practices in real-world software ecosystems.</li>
+        </ul>
+    </article>
     <article>
         <h3>Intel Corporation | Hillsboro, Oregon</h3>
         <h4>Technology Project/Program Management Analyst</h4>
@@ -86,7 +98,6 @@
         </ul>
     </article>
 </section>
-<div class="page-break"></div>
 <section>
     <h2>Top Skills</h2>
     <h3>Cloud &amp; Infrastructure:</h3>
@@ -130,16 +141,16 @@
         <li><strong>Training &amp; Mentoring:</strong> Onboarding, knowledge sharing</li>
     </ul>
 </section>
+<div class="print-sidebar">
 <section>
     <h2>Certifications</h2>
-    <ul>
-        <li>CompTIA A+</li>
-        <li>AWS Certified Cloud Practitioner</li>
-    </ul>
+    <p>CompTIA A+</p>
+    <p>AWS Certified Cloud Practitioner</p>
 </section>
 <section>
     <h2>Education</h2>
     <h3>Lakeshore Technical College</h3>
     <p class="summary">Associate's Coursework in IT Networking</p>
 </section>
+</div>
 <p class="keywords">datacenter technician | project management skills | dropbox | verbal and written communication skills | management skills | computer skills | computer science | computer networking | computer hardware | computer engineering | computer engineering technology | computer engineering technician | computer and information systems | computer and information systems security | cloud computing | cloud architecture | cloud engineer | cloud architect | cloud administrator | cloud computing security | cloud computing technology | cloud computing management | cloud computing infrastructure | cloud computing architecture | cloud computing applications | cloud computing administration | validation engineer | validation technician | network validation engineer</p>
